[package]
name = "uview-miner-stats"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

zingolib = { git = "https://github.com/w-cash/zingolib", rev = "d78408da04d5e97dca57a8136a81dbfdb5efe7b7" }
pepper-sync = { git = "https://github.com/w-cash/zingolib", rev = "d78408da04d5e97dca57a8136a81dbfdb5efe7b7", package = "pepper-sync" }
zcash_primitives = { git = "https://github.com/zcash/librustzcash", rev = "d387aed7e04e881dbe30c6ff8b26a96c834c094b" }
